--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,13 @@
+<!--
+ * @Author: hehuan
+ * @Date: 2022-07-26 10:18:31
+ * @LastEditors: hehuan
+ * @LastEditTime: 2022-07-27 14:05:36
+ * @Description: ''
+-->
 <html>
 <head>
-    <title>猿创营</title>
+    <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,user-scalable=no">
     <style type="text/css">
